kubernetes/apps/database/maria/cluster/ingress.yaml
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: ${APP}-internal
  annotations:
    reloader.stakater.com/auto: "true"
    external-dns.alpha.kubernetes.io/target: "${INTERNAL_DOMAIN}"
    external-dns.alpha.kubernetes.io/hostname: ${APP}.${CLUSTER_DOMAIN}
spec:
  parentRefs:
    - name: internal
      namespace: network
      sectionName: mariadb
  rules:
    - backendRefs:
        - name: ${APP}
          port: 3306
